--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,12 @@ body {
     font-family: Arial;
 }
 
+header.auth-page {
+    background: #000;
+    justify-content: center;
+    padding: 10px 0;
+}
+
 .page-auth h4 {
     text-align: center;
     margin-top: 40px;
@@ -13,5 +19,5 @@ body {
 }
 
 .page-auth .form-group-orgname .icon-check {
-    
+
 }
