--- a/src/styles.css
+++ b/src/styles.css
@@ -90,3 +90,27 @@ header.auth-page {
     padding: 20px;
     height: 100%;
 }
+
+
+.events-create-form .empty {
+    position: relative;
+}
+
+.events-create-form .empty .image-upload {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.events-create-form .event-image-wrapper {
+    width: 100%;
+}
+
+.events-create-form .event-image-wrapper img {
+    max-width: 100%;
+    display: block;
+}
